setup server with database sql by php

--- a/index.html
+++ b/index.html
@@ -40,3 +40,5 @@
 </body>
 
 </html>
+
+<!-- My query : INSERT INTO `tripdata` (`sr.no`, `name`, `number`, `email`, `gender`, `dt`) VALUES ('1', 'testName', '1234567890', 'rishi@1399gamil.com', 'M', current_timestamp()); -->
